--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-27 08:36:37 -0400 
+%% Created for Pete Su at 2023-08-28 11:26:56 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Crispino2008,
+	author = {Lu{\'{\i}}s C. B. Crispino and Atsushi Higuchi and George E. A. Matsas},
+	date-added = {2023-08-28 11:26:46 -0400},
+	date-modified = {2023-08-28 11:26:56 -0400},
+	doi = {10.1103/revmodphys.80.787},
+	journal = {Rev. Mod. Phys.},
+	note = {\href{http://arxiv.org/abs/0710.5373v1}{arxiv:0710.5373v1}},
+	number = {3},
+	pages = {787--838},
+	publisher = {American Physical Society ({APS})},
+	title = {{The Unruh effect and its applications}},
+	url = {https://doi.org/10.1103%2Frevmodphys.80.787},
+	volume = {80},
+	year = 2008,
+	bdsk-url-1 = {https://doi.org/10.1103%2Frevmodphys.80.787},
+	bdsk-url-2 = {https://doi.org/10.1103/revmodphys.80.787}}
 
 @incollection{Wallace2020,
 	author = {David Wallace},
