--- a/0710.5373/rmpfinalsub.tex
+++ b/0710.5373/rmpfinalsub.tex
@@ -1,11 +1,54 @@
 %\documentclass[floatfix,preprint,aps,rmp,showpacs,amsmath,amssymb,eqsecnum]{revtex4}
-\documentclass[floatfix,twocolumn,aps,rmp,showpacs,amsmath,amssymb,eqsecnum]{revtex4}
+\documentclass[12pt,nofootinbib,floatfix,aps,prd,showpacs,amsmath,amssymb,eqsecnum]{revtex4-2}
 %\documentclass[floatfix,twocolumn,aps,rmp,showpacs,amsmath,amssymb,eqsecnum,natbib]{revtex4}
 %\documentclass[floatfix,final,aps,rmp,showpacs,amsmath,amssymb,eqsecnum]{revtex4}
 \usepackage{epsfig}
 \bibliographystyle{apsrmplong}
 %\usepackage{graphicx}% Include figure files
 %\usepackage{dcolumn}% Align table columns on decimal point
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 
@@ -33,7 +76,7 @@ York YO10 5DD, United Kingdom}
 \affiliation{Instituto de F\'\i sica Te\'orica, Universidade Estadual Paulista,
 Rua Pamplona 145, 01405-900, S\~ao Paulo, SP, Brazil}
 
-\date{\today}
+\date{29 Oct 2007}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%        PACS          %%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,8 +107,11 @@ made  to clarify what seems to be common misconceptions.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%    TABLE of CONTENTS %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+
 \tableofcontents
 
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%        MANUSCRIPT      %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
