--- a/0710.5373/rmpfinalsub.tex
+++ b/0710.5373/rmpfinalsub.tex
@@ -9,11 +9,12 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{mathtools}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -108,10 +109,11 @@ made  to clarify what seems to be common misconceptions.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%    TABLE of CONTENTS %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-
+\small
 \tableofcontents
 
 \newpage
+\normalsize
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%        MANUSCRIPT      %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1402,19 +1404,20 @@ with all other commutators vanishing.
 Thus, one can 
 expand the field $\hat{\Phi}$ in the left and right Rindler wedges as
 \begin{widetext}
-\begin{eqnarray}
-\hat{\Phi} & = & \int_{0}^{+\infty}d\omega \int d^2{\bf k}_\perp
-\left[ \hat{a}_{\omega{\bf k}_\perp}^R
+\begin{multline}
+\hat{\Phi}  =  \int_{0}^{+\infty}d\omega \int d^2{\bf k}_\perp
+\bigl[ \hat{a}_{\omega{\bf k}_\perp}^R
 v^R_{\omega {\bf k}_\perp}(\tau,\xi,{\bf x}_\perp)
-+ \hat{a}_{\omega{\bf k}_\perp}^{R\dagger}
+\, + \\
+\hat{a}_{\omega{\bf k}_\perp}^{R\dagger}
 v_{\omega {\bf k}_\perp}^{R*}(\tau,\xi,{\bf x}_\perp) 
 + \hat{a}_{\omega{\bf k}_\perp}^L
 v^L_{\omega{\bf k}_\perp}(\bar{\tau},\bar{\xi},{\bf x}_\perp)
 + \hat{a}_{\omega{\bf k}_\perp}^{L\dagger}v_{\omega{\bf k}_\perp}^{L*}
 (\bar{\tau},\bar{\xi},{\bf x}_\perp)
-\right].\nonumber \\
+\bigr].
 \label{sec2:rindler}
-\end{eqnarray}
+\end{multline}
 \end{widetext}
 The Rindler vacuum state $|0_{\rm R}\rangle$ is defined by requiring that 
 $\hat a^R_{\omega{\bf k}_\perp}|0_{\rm R}\rangle 
@@ -1529,29 +1532,28 @@ which were originally computed by \textcite{Fulling73}.
 To calculate the Bogolubov coefficients it is 
 convenient to examine the behavior of the solutions on the future
 Killing horizon, $t=z$, $t>0$.  There we have
-\begin{eqnarray}
-v_{\omega{\bf k}_\perp}^R & \to
-& \int_{-\infty}^{\infty} \frac{dk_z}{\sqrt{4\pi k_0}}
-\nonumber \\
-&& \times \left[ 
-\alpha_{\omega k_z k_\bot}^R e^{-i(k_0 -k_z)V/2} + \right.\nonumber \\
-&& \left. + \beta_{\omega k_z k_\bot}^R e^{i(k_0-k_z)V/2}\right]
-\frac{e^{i{\bf k}_\bot\cdot{\bf x}_\bot}}{2\pi}.
-\end{eqnarray}
+\begin{multline}
+v_{\omega{\bf k}_\perp}^R \to
+\int_{-\infty}^{\infty} \frac{dk_z}{\sqrt{4\pi k_0}}
+\times \left[ 
+\alpha_{\omega k_z k_\bot}^R e^{-i(k_0 -k_z)V/2}
++ \beta_{\omega k_z k_\bot}^R e^{i(k_0-k_z)V/2}\right] \\
+\times \frac{e^{i{\bf k}_\bot\cdot{\bf x}_\bot}}{2\pi}.
+\end{multline}
 On the other hand, using the small-argument approximation 
 (\ref{appendixA:small-argumentK}) for the
 modified Bessel function, we have for $\xi \to -\infty$
-\begin{eqnarray}
-v_{\omega{\bf k}_\perp}^R & \to & 
+\begin{multline}
+v_{\omega{\bf k}_\perp}^R  \to 
 \frac{i}{4\pi}\left[a\sinh(\pi\omega/a)\right]^{-1/2}
 e^{i{\bf k}_\bot\cdot{\bf x}_\bot}
-\nonumber \\
-&& \times
+\\
+\times
 \left( \frac{(\kappa/2a)^{i\omega/a}e^{-i\omega u}}{\Gamma(1+i\omega/a)} 
 - \frac{(\kappa/2a)^{-i\omega/a}e^{-i\omega v}}{\Gamma(1-i\omega/a)}
-\right),\nonumber \\
+\right),
 \label{sec2:smallargument}
-\end{eqnarray}
+\end{multline}
 where we recall $\kappa = (k_\perp^2 + m^2)^{1/2}$.  
 The first term inside the parentheses in this equation 
 oscillates infinitely many times as
@@ -1560,17 +1562,16 @@ Such a term should be regarded as zero.  Hence, the
 Bogolubov coefficient $\alpha_{\omega k_z k_\bot}^R$ is obtained 
 by multiplying Eq.~(\ref{sec2:smallargument}) by
 $e^{i(k_0-k_z)V/2}$ and integrating over $V$ as 
-\begin{eqnarray}
-\alpha_{\omega k_z k_\perp}^R & = &
+\begin{align}
+\alpha_{\omega k_z k_\perp}^R  &= 
 - \frac{i(\kappa/2a)^{-i\omega/a}(k_0-k_z)}{4
 \sqrt{\pi ak_0\sinh(\pi\omega/a)}\Gamma(1-i\omega/a)}
-\nonumber \\
-&& \times \int_0^\infty dV\,
+\int_0^\infty dV\,
 (aV)^{-i\omega/a}e^{i(k_0-k_z)V/2}\nonumber \\
-& = & 
+& = 
 \frac{e^{\pi\omega/2a}}{\sqrt{4\pi k_0 a \sinh(\pi\omega/a)}}
-\left(\frac{k_0+k_z}{k_0-k_z}\right)^{-i\omega/2a},\nonumber \\
-\end{eqnarray}
+\left(\frac{k_0+k_z}{k_0-k_z}\right)^{-i\omega/2a},
+\end{align}
 where we have used $\kappa = \sqrt{(k_0-k_z)(k_0+k_z)}$.
 Note that 
 we have implicitly chosen 
@@ -1673,18 +1674,16 @@ not only in the left and right Rindler
 wedges but also in the whole of Minkowski spacetime. 
 This fact can readily be seen by inverting the relation 
 (\ref{sec2:wexplicit}):
-\begin{eqnarray}
-&& \frac{1}{\sqrt{2k_0(2\pi)^3}} 
-e^{-ik_0t +ik_z z + i{\bf k}_\perp\cdot{\bf x}_\perp}\nonumber \\
-&& =  \frac{1}{\sqrt{2\pi a k_0}}
+\begin{multline}
+\frac{1}{\sqrt{2k_0(2\pi)^3}} 
+e^{-ik_0t +ik_z z + i{\bf k}_\perp\cdot{\bf x}_\perp}
+=  \frac{1}{\sqrt{2\pi a k_0}}
 \int_0^\infty d\omega [ 
 e^{i\vartheta(k_z)\omega/a}
-w_{-\omega {\bf k}_\perp} 
-\nonumber \\
-&& \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 
+w_{-\omega {\bf k}_\perp} \\
 + e^{-i\vartheta(k_z)\omega/a}
 w_{+\omega{\bf k}_\perp} ].  \label{sec2:unique!}
-\end{eqnarray}
+\end{multline}
 One may object to this conclusion as do \textcite{Belinskiietal97}
 because the
 modes $w_{\pm \omega{\bf k}_\bot}$ 
@@ -1753,8 +1752,7 @@ The two-point function in the Minkowski vacuum state is well known to be
 \begin{eqnarray}
 \Delta(x;x') & = &
 \langle 0_{\rm M}|\hat{\Phi}(x)
-\hat{\Phi}(x')|0_{\rm M}\rangle\nonumber \\
-& = & \int \frac{dk_z d^2{\bf k}_\bot}{2k_0(2\pi)^3}
+\hat{\Phi}(x')|0_{\rm M}\rangle  =  \int \frac{dk_z d^2{\bf k}_\bot}{2k_0(2\pi)^3}
 e^{-ik\cdot(x-x')}, \label{sec2:two-pt}
 \end{eqnarray}
 where $x = (t,z,{\bf x}_\bot)$ and similarly for $x'$.
@@ -1788,79 +1786,81 @@ with all other commutators vanishing.
 Eqs.~(\ref{sec2:barelation1}) and (\ref{sec2:barelation2}) can be used
 to find the following expectation values:
 \begin{widetext}
-\begin{eqnarray}
+\begin{align}
  \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^{R\dagger}
 a_{\omega'{\bf k}'_\bot}^R|0_{\rm M}\rangle
-& = &
+& =
 \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^{L\dagger}
-a_{\omega'{\bf k}'_\bot}^L|0_{\rm M}\rangle
-= (e^{2\pi\omega/a} -1)^{-1}
-\delta(\omega-\omega')\delta^2({\bf k}_\bot - {\bf k}'_\bot),\\
+a_{\omega'{\bf k}'_\bot}^L|0_{\rm M}\rangle\\
+& = (e^{2\pi\omega/a} -1)^{-1}
+\delta(\omega-\omega')\delta^2({\bf k}_\bot - {\bf k}'_\bot),\nonumber\\
 \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^{R}
 a_{\omega'{\bf k}'_\bot}^{R\dagger}|0_{\rm M}\rangle
-& = &
+& = 
 \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^{L}
-a_{\omega'{\bf k}'_\bot}^{L\dagger}|0_{\rm M}\rangle
-= (1-e^{-2\pi\omega/a})^{-1} 
+a_{\omega'{\bf k}'_\bot}^{L\dagger}|0_{\rm M}\rangle\\
+& = (1-e^{-2\pi\omega/a})^{-1} 
 \delta(\omega-\omega')
- \delta^2({\bf k}_\bot - {\bf k}'_\bot),\\
+ \delta^2({\bf k}_\bot - {\bf k}'_\bot),\nonumber \\
 \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^L
 a_{\omega'{\bf k}'_\bot}^R|0_{\rm M}\rangle 
-& = & \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^{L\dagger}
-a_{\omega'{\bf k}'_\bot}^{R\dagger}|0_{\rm M}\rangle
-= (e^{\pi\omega/a} - e^{-\pi\omega/a})^{-1}
+& =  \langle 0_{\rm M}|a_{\omega{\bf k}_\bot}^{L\dagger}
+a_{\omega'{\bf k}'_\bot}^{R\dagger}|0_{\rm M}\rangle\\
+& = (e^{\pi\omega/a} - e^{-\pi\omega/a})^{-1}
 \delta(\omega-\omega')
- \delta^2({\bf k}_\bot + {\bf k}'_\bot).
-\end{eqnarray}
+ \delta^2({\bf k}_\bot + {\bf k}'_\bot).\nonumber
+\end{align}
 The vacuum expectation values of the other products of two
 creation/annihilation operators vanish.  Then, the two-point function
 of the field $\hat{\Phi}(x)$ given in Eq.~(\ref{sec2:rindler}) is
-\begin{eqnarray}
-\Delta(x;x')
-& = & \int_0^\infty d\omega \int d^2{\bf k}_\bot 
-\left\{ \left[ v^R_{\omega{\bf k}_\bot}(x)v^{R*}_{\omega{\bf
+\begin{equation}
+\begin{aligned}
+\Delta(x;x') & = 
+\int_0^\infty d\omega \int d^2{\bf k}_\bot 
+\biggl\{ \bigl[ v^R_{\omega{\bf k}_\bot}(x)v^{R*}_{\omega{\bf
 k}_\bot}(x') + v^L_{\omega{\bf k}_\bot}(x)v^{L*}_{\omega{\bf
-k}_\bot}(x')\right]
-(1-e^{-2\pi\omega/a})^{-1}\right.\nonumber \\
-&& \ \ \ \ \ \ \ \ \ \ +  \left[ v^{R*}_{\omega{\bf k}_\bot}(x)
+k}_\bot}(x')\bigr]
+(1-e^{-2\pi\omega/a})^{-1} \\
+&\quad+  \left[ v^{R*}_{\omega{\bf k}_\bot}(x)
 v^R_{\omega{\bf
 k}_\bot}(x') + v^{L*}_{\omega{\bf k}_\bot}(x)v^L_{\omega{\bf
 k}_\bot}(x')\right]
-(e^{2\pi\omega/a}-1)^{-1}\nonumber \\
-&& \ \ \ \ \ \ \ \ \ \ 
-+ 2\left[ v^R_{\omega{\bf k}_\bot}(x)v_{\omega\,-{\bf k}_\bot}^L(x^{\prime})
-+ v^{R*}_{\omega{\bf k}_\bot}(x)v^{L*}_{\omega\,-{\bf k}_\bot}(x^{\prime})\right] 
-(e^{\pi\omega/a}-e^{-\pi\omega/a})\nonumber \\
-&& \ \ \ \ \ \ \ \ \ \ \left.
-+ 2\left[ v^L_{\omega{\bf k}_\bot}(x)
+(e^{2\pi\omega/a}-1)^{-1} \\
+&\quad+ 2\bigl[ v^R_{\omega{\bf k}_\bot}(x)v_{\omega\,-{\bf k}_\bot}^L(x^{\prime})
++ v^{R*}_{\omega{\bf k}_\bot}(x)v^{L*}_{\omega\,-{\bf k}_\bot}(x^{\prime})\bigr] 
+(e^{\pi\omega/a}-e^{-\pi\omega/a}) \\
+&\quad
++ 2\bigl[ v^L_{\omega{\bf k}_\bot}(x)
 v_{\omega\,-{\bf k}_\bot}^R(x^{\prime})
 + v^{L*}_{\omega{\bf k}_\bot}(x)
-v^{R*}_{\omega\,-{\bf k}_\bot}(x^{\prime})\right] 
-(e^{\pi\omega/a}-e^{-\pi\omega/a})\right\}.
-\end{eqnarray}
+v^{R*}_{\omega\,-{\bf k}_\bot}(x^{\prime})\bigr] 
+(e^{\pi\omega/a}-e^{-\pi\omega/a})\biggr\}.\\
+\phantom{x}
+\end{aligned}
+\end{equation}
 This expression can be simplified using Eqs~(\ref{sec2:uw})
 and (\ref{sec2:vw}) as
 \begin{equation}
 \Delta(x;x^{\prime})
  = \int_0^\infty d\omega \int d^2{\bf k}_\bot
-\left[ w_{+\omega{\bf k}_\bot}(x)w^*_{+\omega{\bf k}_\bot}(x^{\prime})
+\bigl[ w_{+\omega{\bf k}_\bot}(x)w^*_{+\omega{\bf k}_\bot}(x^{\prime})
 + w_{-\omega{\bf k}_\bot}(x)w^*_{-\omega{\bf
-k}_\bot}(x^{\prime})\right],
+k}_\bot}(x^{\prime})\bigr],
 \label{sec2:undefined?}
 \end{equation}
 where $w_{\pm\omega{\bf k}_\bot}$ are given by
 Eq.~(\ref{sec2:wexplicit}).  Thus,
-\begin{equation}
+\begin{multline}
 \Delta(x;x^{\prime}) = 
 \frac{1}{32\pi^4 a}
 \int_{-\infty}^\infty d\omega
 \int_{-\infty}^{\infty}\frac{dk_z}{k_0}
-\int_{-\infty}^{\infty}d\vartheta(k_z')
+\int_{-\infty}^{\infty}d\vartheta(k_z')\\
 \int d^2{\bf k}_\bot e^{i\left[\vartheta(k_z)-\vartheta(k_z')
 \right]\omega/a}
 e^{-ik_0 t + ik'_0t' + ik_z z - ik'_z z'+
 i{\bf k}_\bot\cdot({\bf x}_\bot -{\bf x}'_\bot)}.\label{sec2:intermed2}
-\end{equation}
+\end{multline}
 \end{widetext}
 The $\omega$- and $\vartheta(k_z')$-integration can
 readily be performed, and we find that the two-point function indeed
@@ -1876,15 +1876,15 @@ compactly-supported functions $f(x)$ and $g(x)$:
 F(f,g) \equiv \int d^4x d^4 x'f^*(x)g(x')\Delta(x;x').
 \end{equation}
 We find using Eq.~(\ref{sec2:undefined?})
-\begin{eqnarray}
-F(f,g) & = & \int_0^\infty d\omega \int d^2{\bf k}_\bot\nonumber \\
-&&\times 
-\left[
+\begin{multline}
+F(f,g) =  \int_0^\infty d\omega \int d^2{\bf k}_\bot\nonumber
+\times \\
+\biggl[
 \hat{f}^{R*}(-\omega,{\bf k}_\bot)
-\hat{g}^{R}(-\omega,{\bf k}_\bot)\right. \nonumber \\
-&& \left. + \hat{f}^{R*}(+\omega,{\bf k}_\bot)
-\hat{g}^{R}(+\omega,{\bf k}_\bot)\right],
-\end{eqnarray}
+\hat{g}^{R}(-\omega,{\bf k}_\bot)
++ \hat{f}^{R*}(+\omega,{\bf k}_\bot)
+\hat{g}^{R}(+\omega,{\bf k}_\bot)\biggr],
+\end{multline}
 where $\hat{f}^{R}$ is defined by Eq.~(\ref{sec2:fR}), and
 $\hat{g}^{R}$ is defined similarly.  It can readily be shown that this
 agrees with the standard expression for the smeared two-point function,
@@ -1950,15 +1950,13 @@ where $\kappa = (k_\perp^2 + m^2)^{1/2}$ as before.
 Thus, we obtain, using Eq.~(\ref{sec2:2azeta}) 
 after shifting of the integration variable as $\vartheta \to \vartheta +
 a\zeta$,
-\begin{eqnarray}
-w_{\pm\omega{\bf k}_\bot}
-& = & 
-\frac{e^{i{\bf k}_\bot\cdot{\bf x}_\bot \pm i\omega\zeta}}{2\pi}
+\begin{equation}
+w_{\pm\omega{\bf k}_\bot} = \frac{e^{i{\bf k}_\bot\cdot{\bf x}_\bot \pm i\omega\zeta}}{2\pi}
 \int_{-\infty}^\infty \frac{d\vartheta}{\sqrt{8a}\,\pi}
-e^{\pm i \omega \vartheta/a} \nonumber \\
-&& \ \ \ \ \ \ \ \ \ \ 
-\times \exp\left( - i\kappa T\cosh\vartheta \right).
-\end{eqnarray}
+e^{\pm i \omega \vartheta/a}
+\times
+\exp\left( - i\kappa T\cosh\vartheta \right).
+\end{equation}
 The $\vartheta$-integral is the same for both signs of 
 $e^{\pm i\omega\vartheta/a}$ 
 because the imaginary part of the integrand is odd in
@@ -1983,26 +1981,25 @@ Now, from Eq.~(\ref{sec2:uw}) we find that the positive-frequency modes
 with respect to the boost generator 
 in the right Rindler wedge corresponding to the Rindler vacuum state
 take the following form in the expanding degenerate Kasner universe:
-\begin{eqnarray}
-v^R_{\omega{\bf k}_\bot} & = & -i
+\begin{equation}
+v^R_{\omega{\bf k}_\bot} = -i
 \frac{e^{-i\omega\zeta}
 e^{i{\bf k}_\bot\cdot{\bf x}_\bot}}
 {2\pi\sqrt{8a(e^{\pi\omega/a}-e^{-\pi\omega/a})}}
-\nonumber \\
-&& \times \left\{ e^{\pi\omega/a} H_{i\omega/a}^{(2)}
+\times \left\{ e^{\pi\omega/a} H_{i\omega/a}^{(2)}
 \left(\kappa T\right)
 + \left[H_{
-i\omega/a}^{(2)}\left(\kappa T\right)\right]^*\right\}.\nonumber\\
+i\omega/a}^{(2)}\left(\kappa T\right)\right]^*\right\}.
 \label{sec2:milnrindler}
-\end{eqnarray}
+\end{equation}
 Then, recalling the fact that
 $[H^{(2)}_\nu(x)]^* = H_{-\nu}^{(1)}(x)$ if $\nu$ is purely
 imaginary and if $x$ is real and using 
 the formulas~\cite{Gradshteynbook}
-\begin{eqnarray}
-&& e^{\nu\pi i}H^{(2)}_{-\nu} (z) = H^{(2)}_{\nu}(z),\\
-&& H^{(1)}_{\nu}(z) + H^{(2)}_{\nu}(z)  =  2J_{\nu}(z)
-\end{eqnarray}
+\begin{align}
+e^{\nu\pi i}H^{(2)}_{-\nu} (z) &= H^{(2)}_{\nu}(z),\\
+H^{(1)}_{\nu}(z) + H^{(2)}_{\nu}(z)  &=  2J_{\nu}(z)
+\end{align}
 with $\nu=-i\omega/a$ in Eq.~(\ref{sec2:milnrindler}), we find
 \begin{equation}
 v_{\omega{\bf k}_\bot}^R  = -i 
@@ -2085,13 +2082,12 @@ It is convenient for our purposes to rewrite the energy $E_X$ as
 E_X = (i/2) (\phi,X^\mu\nabla_\mu \phi)_{KG}.  \label{sec2:KGenergy}
 \end{equation}
 This can readily be established, by using the equality
-\begin{eqnarray}
-&& \phi\nabla_\mu(X^\alpha \nabla_\alpha\phi) -
+\begin{equation}
+\phi\nabla_\mu(X^\alpha \nabla_\alpha\phi) -
 X^\alpha\nabla_\alpha\phi\nabla_\mu\phi + 2X^\alpha
-T_{\alpha\mu}\nonumber \\
-&& = \nabla^\alpha 
+T_{\alpha\mu} = \nabla^\alpha 
 \left[\phi(X_\alpha\nabla_\mu\phi - X_\mu\nabla_\alpha\phi)\right].
-\end{eqnarray}
+\end{equation}
 
 Now, one can divide the scalar field into the positive- and
 negative-frequency parts with respect to the time-translation Killing
@@ -2168,22 +2164,21 @@ we find
 & = &  \phi^{(T+)} + \phi^{(T-)},
 \end{eqnarray}
 where
-\begin{eqnarray}
-\phi^{(T+)} & = & 
+\begin{multline}
+\phi^{(T+)} =
 \int_0^\infty d\omega \int d^2{\bf k}_\bot
 \left[ \frac{c_R(\omega,{\bf k}_\bot)}{\sqrt{1-e^{-2\pi\omega/a}}}
-\,w_{-\omega{\bf k}_\bot}\right. \nonumber \\
-&& \ \ \ \ \ \ \ \ 
+\,w_{-\omega{\bf k}_\bot}\right. \\
 \left. - \frac{e^{-\pi\omega/a}c_R^*(\omega,{\bf k}_\bot)}
 {\sqrt{1-e^{-2\pi\omega/a}}}\,w_{+\omega{\bf k}_\bot}\right].
-\end{eqnarray}
+\end{multline}
 Then, using 
 Eq.~(\ref{sec2:posmodes}), we obtain the classical Minkowski particle
 number as
 \begin{eqnarray}
 N_T & = & (\phi^{(T+)},\phi^{(T+)})_{\rm KG}\nonumber \\
 & = & \int_0^\infty d\omega\int d^2{\bf k}_\bot
-|c_R(\omega,{\bf k}_\bot)|^2\coth\frac{\pi\omega}{a}.\nonumber \\
+|c_R(\omega,{\bf k}_\bot)|^2\coth\frac{\pi\omega}{a}.
 \end{eqnarray}
 Comparing this expression with that for the classical Rindler
 particle number (\ref{sec2:classicalRindler}), we find that 
@@ -2344,16 +2339,16 @@ z & \mapsto & z(\alpha) \equiv t\sinh\alpha a + z\cosh\alpha a,
 then, for $\alpha = i\pi/a$, one has $(t,z)\mapsto (-t,-z)$.
 Bisognano and Wichmann proved, roughly speaking, that this fact
 translates to
-\begin{eqnarray}
-&& \exp(-\hat{K}\pi/a)
+\begin{multline}
+ \exp(-\hat{K}\pi/a)
 \hat{\Phi}(t^{(1)},z^{(1)},{\bf x}_\perp^{(1)})
 \cdots \hat{\Phi}(t^{(n)},z^{(n)},{\bf x}_\perp^{(n)})
-|0_{\rm M}\rangle \nonumber \\
-&& = \hat{\Phi}(-t^{(1)},-z^{(1)},{\bf x}_\perp^{(1)})
+|0_{\rm M}\rangle \\
+ = \hat{\Phi}(-t^{(1)},-z^{(1)},{\bf x}_\perp^{(1)})
 \cdots \hat{\Phi}(-t^{(n)},-z^{(n)},{\bf x}_\perp^{(n)})|0_{\rm
-M}\rangle,\nonumber \\
+M}\rangle, \\
 \label{sec2:Bison}
-\end{eqnarray}
+\end{multline}
 where $|0_{\rm M}\rangle$ is a unique Poincar\'{e} invariant vacuum,
 which is assumed to exist, if
 $(t^{(i)},z^{(i)},{\bf x}_\perp^{(i)})$, $i=1,2,\ldots,n$, are spatially
@@ -2389,19 +2384,19 @@ simplest case with $n=1$ and with free (four-dimensional) scalar field.
 Using 
 $\hat{K}|0_{\rm M}\rangle = 0$ and $\hat{a}^M_{k_z{\bf k}_\bot}|0_{\rm
 M}\rangle = 0$, we have for a real parameter $\alpha$
-\begin{eqnarray}
-&& \exp(i\alpha\hat{K})\hat{\Phi}(t,z,{\bf x}_\bot)|0_{\rm
-M}\rangle\nonumber \\
-& & = 
+\begin{align}
+\exp(i\alpha\hat{K})\hat{\Phi}(t,z,{\bf x}_\bot)|0_{\rm
+M}\rangle
+& = 
 \hat{\Phi}(t(\alpha),z(\alpha),{\bf x}_\bot)|0_{\rm M}\rangle
-\nonumber \\
-& & = \int \frac{d^3{\bf k}}{\sqrt{(2\pi)^32k_0}}\,
+\nonumber \\ 
+& = \int \frac{d^3{\bf k}}{\sqrt{(2\pi)^32k_0}}\,
 e^{i(k_0z-k_z t)\sinh\alpha a - i{\bf k}_\bot\cdot{\bf
 x}_\bot}\nonumber \\
-&& \times e^{i(k_0t-k_z z)\cosh\alpha a}
+& \quad \times e^{i(k_0t-k_z z)\cosh\alpha a}
 \hat{a}^{M\dagger}_{k_z{\bf k}_\bot}|0_{\rm M}\rangle, 
 \label{sec2:modulusless}
-\end{eqnarray}
+\end{align}
 where $t(\alpha)$ and
 $z(\alpha)$ are defined by Eqs.~(\ref{sec2:talpha}) and 
 (\ref{sec2:zalpha}), respectively.  It can be shown that the variable
@@ -2490,16 +2485,16 @@ It is well known [see, e.g., \textcite{Bernard74}] that the right-hand
 side of Eq.~(\ref{sec2:UnruhWeiss}) for an arbitrary value of $\beta$ 
 is obtained by the analytic continuation
 $\tau_e = i\tau$ of the following expression:
-\begin{eqnarray}
-&& D_\beta(x_e,x_e') \nonumber \\
-&& \equiv
+\begin{equation}
+D_\beta(x_e,x_e')
+\equiv
 \frac{\int_{\phi(\tau_e=0)=\phi(\tau_e=\beta)} 
 \left[D\phi\right]
 \phi(x_e)\phi(x_e')\exp\left[-S_E^R(\beta)\right]}
 {\int_{\phi(\tau_e=0)=\phi(\tau_e=\beta)} 
 \left[D\phi\right]
-\exp\left[-S_E^R(\beta)\right]},\nonumber \\
-\end{eqnarray}
+\exp\left[-S_E^R(\beta)\right]},
+\end{equation}
 where $x_e = (t_e,z_e)$ is obtained from Eq.~(\ref{sec2:Lorentz}) as
 \begin{equation}
 t_e  =  \rho\sin a\tau_e,\;\;\;
@@ -2774,20 +2769,23 @@ rule~(\ref{RMgeneral}).}
 \label{RMinertial}
 \end{equation}
 where the excitation amplitude is (up to an arbitrary phase)
-\begin{eqnarray}
+\begin{equation}
+\begin{aligned}
 ^{\rm exc}\!\! {\cal A}^{\rm em}_{\bf k} 
-    & = & i \langle E |\otimes \!\langle{\bf k}{}_{\rm M}
+    & =  i \langle E |\otimes \!\langle{\bf k}{}_{\rm M}
       | \hat S_I | 0_{\rm M} \rangle \otimes|E_0 \rangle
-\nonumber \\
-    & = &  \frac{q}{(16 \pi^3 \omega)^{1/2}} 
+\\
+    & =  
+\begin{multlined}[t]
+\frac{q}{(16 \pi^3 \omega)^{1/2}} 
     \int_{-\infty}^{\infty} d\tau 
-    \exp (i \Delta E \tau)
-\nonumber \\
-     & \times &  \exp[(i\omega/a) \sinh a\tau - (i k_z/a) 
+    \exp (i \Delta E \tau)\\
+    \times  \exp[(i\omega/a) \sinh a\tau - (i k_z/a) 
 \cosh a\tau ]
-\nonumber \\
+\end{multlined}
 \label{UDinertialA}
-\end{eqnarray}
+\end{aligned}
+\end{equation}
 with $\Delta E\equiv E-E_0$. We have adopted here the subscript $M$ to label 
 states defined by inertial observers in Minkowski spacetime. 
 (Note here 
@@ -2902,16 +2900,15 @@ By making now a further change of variables as
 \sigma      &\mapsto& \lambda \equiv \exp (a \sigma/2),
 \end{eqnarray}
 we obtain
-\begin{eqnarray}
-R^\perp &=&\frac{|q|^2}{8 \pi^3 a  }
+\begin{multline}
+R^\perp =\frac{|q|^2}{8 \pi^3 a  }
           \int^{\infty}_{1} \frac{d\zeta}{\zeta}
           \int^{\infty}_{0} d\lambda\, \lambda^{2i \Delta E /a -1}
-\nonumber \\          
-          &\times& 
+\\          
+          \times
           \exp [i (k_\perp^2+m^2)^{1/2}
           (\lambda -\lambda^{-1}) (\zeta + \zeta^{-1})/(2a)  ].
-\nonumber          
-\end{eqnarray}
+\end{multline}
 Now, we make the change of variables
 $
 \{\zeta, \lambda \} \mapsto \{ \kappa, \varpi \}
@@ -2949,18 +2946,15 @@ rate~(\ref{RMinertialintermediary})
 accelerated detector moving along the $z$-axis in Minkowski 
 spacetime covered with Rindler coordinates is shown.}
 \end{figure}
-\begin{eqnarray}
+\begin{equation}
 ^{\rm exc}\! R     
-& & 
 = 
 \frac{|q|^2 a e^{-\pi \Delta E/a}}{2 \pi^2 }
           \int^{\infty}_{0} d\mu \; \mu\;  
-\nonumber \\
-& & 
 \times \left( K_{i\Delta E/a} [\sqrt {\mu^2+(m/a)^2 \,} ]
        \right)^2.
 \label{RMfinal}
-\end{eqnarray}
+\end{equation}
 The angular distribution of the corresponding emitted particles 
 in the massless case can be found in \textcite{Kolbenstvedt88}. 
 Next, we shall reproduce this detector response from the point 
@@ -3128,22 +3122,19 @@ is the excitation amplitude with absorption  of a
 Rindler particle $| \omega {\bf k}_\perp\,{}_{\rm R} \rangle$.
 The excitation amplitudes~(\ref{AREM}) and~(\ref{ARABS}) can 
 be shown to be 
-\begin{eqnarray}
-& & 
+\begin{multline}
 {^{\rm exc} \! {\cal A}_{\omega {\bf k}_\perp}^{ \rm em (abs) }} = 
 q \int^{\infty}_{-\infty} 
 d\tau 
 \exp [i{\bf k}_\perp\cdot {\bf x}_\perp + i (\Delta E + (-) \omega) \tau ]
-\nonumber \\
-& &
+\\
 \times 
      \left[ 
      \frac{\sinh (\pi \omega/a)}{4 \pi^4 a}
      \right]^{1/2}
 K_{i\omega/a} \left(\! \frac{(k_\perp^2 + m^2)^{1/2} e^{a\xi}}{a} \! \right)
-\nonumber \\ 
 \label{amplitudedetectorrindler}
-\end{eqnarray}
+\end{multline}
 up to some multiplicative phase. It is easy to verify in this case
 that  ${^{\rm exc}\! {\cal A}_{\omega {\bf k}_\perp}^{ \rm em }} =0 $, as expected,
 since uniformly accelerated detectors are static according
@@ -3277,7 +3268,7 @@ by letting $t=4Ma \tau$ and $\rho=e^{a \xi}/a$ provided that
 $0<\rho<+\infty$ and $-\infty < t < +\infty$. 
 \begin{figure}
 \begin{center}
-\mbox{\epsfig{file=crispinoetal_fig07.ps,width=0.45\textwidth,angle=0}}
+\mbox{\epsfig{file=crispinoetal_fig07.ps,width=4in,angle=0}}
 \end{center}
 \caption{We plot the probability density $d{\cal P}_\omega/d\rho_d$ 
 for different $\omega/m$ ratios, where we have let $Mm=1/4$. We 
@@ -3359,7 +3350,7 @@ $\omega/m$ ratio, the more likely
 the observer is to detect the particle closer to the horizon.
 \begin{figure}
 \begin{center}
-\mbox{\epsfig{file=crispinoetal_fig08.ps,width=0.45\textwidth,angle=0}}
+\mbox{\epsfig{file=crispinoetal_fig08.ps,width=4in,angle=0}}
 \end{center}
 \caption{$\langle \rho_d \rangle$ is shown to be smaller than $\rho_p^{\rm max}
 \equiv 4 M \omega / m$ {\em in the ``high-frequency'' regime 
@@ -3700,27 +3691,25 @@ If the trajectory is $x^\mu(\tau)$, where $\tau$ is the
 proper time, and if the detector is
 turned on at $\tau=\tau_0$, then the Louko-Satz formula for the 
 excitation rate at proper time $\tau$ is
-\begin{eqnarray}
-R_{\rm LS}  & = & |q|^2\left\{ - \frac{\Delta E}{4\pi} +
- \frac{1}{2\pi^2}\int_0^{\tau-\tau_0}ds
-\left[ \frac{1}{s^2}-\frac{\cos (s\Delta E)}{(\Delta x)^2}\right]\nonumber
-\right. \\
-&&\left.
+\begin{equation}
+R_{\rm LS}  = |q|^2\left\{ - \frac{\Delta E}{4\pi} + \right.
+ \left.\frac{1}{2\pi^2}\int_0^{\tau-\tau_0}ds
+\left[ \frac{1}{s^2}-\frac{\cos (s\Delta E)}{(\Delta x)^2}\right]
+\right.
+\left.
 + \frac{1}{2\pi^2(\tau-\tau_0)}\right\}, \label{LoukoSatz}
-\end{eqnarray}
+\end{equation}
 where $\Delta x^\mu\equiv x^\mu(\tau) - x^\mu(\tau-s)$.  The transition
 probability obtained by integrating $R_{\rm LS}$ from $\tau_0$ to a
 given time is indeed logarithmically divergent because of the last term. 
 In the limit $\tau_0\to -\infty$ they find
-\begin{eqnarray}
+\begin{equation}
 \lim_{\tau_0\to -\infty}
-R_{\rm LS} & & =  |q|^2\left\{
+R_{\rm LS} =  |q|^2\left\{
 -\frac{\Delta E}{2\pi}\theta(-\Delta E)\right. 
-\nonumber \\
-   & & \left. +  \frac{1}{2\pi^2}\int_0^{\infty}ds\,\cos(s\Delta E)
+\left. +  \frac{1}{2\pi^2}\int_0^{\infty}ds\,\cos(s\Delta E)
 \left[ \frac{1}{s^2}-\frac{1}{(\Delta x)^2}\right]\right\},
-\nonumber \\
-\end{eqnarray}
+\end{equation}
 where $\theta(x)$ is the Heaviside function.  Louko and Satz have used this
 formula to compute the excitation rate for a trajectory which is
 inertial for $\tau\to-\infty$ and uniformly accelerated with
@@ -4305,11 +4294,11 @@ coordinates the two-velocity is $u^\mu = (\sqrt{a^2 t^2 + 1} , at)$
 [see below Eq.~(\ref{C})]. 
 By using the fermionic field 
 (\ref{FF}) in Eq.~(\ref{AMPI}) and carrying out the integral over $z$,
-we obtain  
-\begin{widetext}
-\begin{eqnarray}
+we obtain
+\begin{small}  
+\begin{multline}
 {\cal A}^{p  \to n}_{(i)} 
-& = &
+ = 
 \frac{- \; (G_F /4\pi )\;\; \delta_{\sigma_e,-\sigma_\nu}}
       { \sqrt{\omega_\nu \omega_e 
       (\omega_\nu + m_\nu) (\omega_e - m_e)}}
@@ -4318,14 +4307,14 @@ e^{i( \Delta m \tau
         + a^{-1} (\omega_e + \omega_\nu) \sinh a\tau 
         - a^{-1} (k_e+k_\nu)             \cosh a\tau)
    }
-\nonumber
 \\
-&\times &
-\{ [(\omega_\nu + m_\nu) (\omega_e - m_e) + k_\nu k_e] \cosh a\tau
+\times
+\{ [(\omega_\nu + m_\nu) (\omega_e - m_e) + k_\nu k_e] \cosh a\tau\\
 -  [(\omega_\nu + m_\nu) k_e + (\omega_e - m_e) k_\nu] \sinh a\tau
 \}.
-\nonumber
-\end{eqnarray}
+\end{multline}
+\end{small}  
+
 Thus, the  differential transition rate  
 $
 {d^2 {\cal P}^{p  \to n}_{\rm in}}/{dk_e \; dk_\nu} =
@@ -4333,9 +4322,10 @@ $
 | {\cal A}_{(i)}^{p \to n} |^2
 $
 calculated in the inertial frame is
-\begin{eqnarray}
+\begin{small}  
+\begin{multline}
 \frac{d^2 {\cal P}^{p  \to n}_{\rm in}}{dk_e \; dk_\nu}
-& = &
+ = 
 \frac{G_F^2}{4 \pi^2 \omega_\nu \omega_e} 
 \int_{-\infty}^{\infty} d s  
 \int_{-\infty}^{\infty} d \xi \;
@@ -4347,15 +4337,14 @@ e^{ i (
         ]
        ) 
   }
-\nonumber
 \\
-& &\times
+\times
 [(\omega_\nu \omega_e + k_\nu k_e) \cosh 2as -
  (\omega_e k_\nu + \omega_\nu k_e) \sinh 2as -
   m_\nu m_e \cosh a\xi].
 \label{TS}
-\end{eqnarray}
-\end{widetext}
+\end{multline}
+\end{small}  
 Next, by defining 
 $$
 k_{e(\nu)} \to k'_{e(\nu)}= 
@@ -4364,22 +4353,18 @@ $$
 we are able to perform the integral in the $s$ variable, and
 the differential transition rate (\ref{TS}) can be cast 
 in the form
-\begin{eqnarray}
+\begin{multline}
 \frac{1}{T} 
 \frac{d^2 {\cal P}^{p \to n}_{\rm in}}{d k'_e  d k'_\nu} 
-\!\!\!\!\!\!
-&& \!=\!
+=
 \frac{G_F^2}{4 \pi^2 {\omega}'_e {\omega}'_\nu} 
 \int_{-\infty}^{\infty} \!\!\! d\xi 
 e^{ i \Delta m \xi + i 2 a^{-1} 
-   ({\omega}'_e + {\omega}'_\nu) \sinh (a\xi/2) } 
-\nonumber
-\\      
-&& \times   
+   ({\omega}'_e + {\omega}'_\nu) \sinh (a\xi/2) } \times \\
      ({\omega}'_\nu {\omega}'_e  + k'_\nu k'_e 
        - m_\nu m_e\cosh a\xi),
 \label{DP2}
-\end{eqnarray}
+\end{multline}
 where $ T \equiv \int_{-\infty}^{\infty} ds $ is the total  proper 
 time and 
 $ 
@@ -4401,37 +4386,34 @@ $
 $
 (Note that ${{\tilde{k}}}_{e(\nu)}$ is dimensionless.)
 Thus, we obtain
-\begin{eqnarray}
+\begin{multline}
  {\Gamma}^{p  \to n}_{\rm in} 
-& = & 
+ =
 \frac{G_F^2 a}{2 \pi^2}
 \int_{-\infty}^{\infty} \frac{d {\tilde{k}}_e }{\tilde\omega_e}
 \int_{-\infty}^{\infty} \frac{d {\tilde{k}}_\nu }{\tilde\omega_\nu}
 \int_{0}^{\infty} \frac{d\lambda }{\lambda^{1-2i\Delta m/a}}  
-\nonumber
 \\      
-& \times &  
+\times
 [
 \tilde\omega_\nu  \tilde\omega_e  + {\tilde{k}}_\nu {\tilde{k}}_e 
 - m_\nu m_e (\lambda^2+\lambda^{-2})/(2 a^2) 
 ] 
-\nonumber
 \\ 
-& \times &  
+\times 
 \exp[i (\tilde\omega_e + \tilde\omega_\nu) (\lambda-\lambda^{-1})] 
 \label{RI}
-\end{eqnarray}
+\end{multline}
 with 
 $\tilde\omega_{e(\nu)}\equiv ({\tilde{k}}^2_{e(\nu)}+m^2_{e(\nu)}/a^2)^{1/2}$.
 Let us assume at this point $m_\nu \to 0$. In this case, using (3.871.3-4) 
 in \textcite{Gradshteynbook}, we perform the integration over $\lambda$ and obtain
 the following final expression for the proton decay rate:
-\begin{eqnarray}
+\begin{equation}
 {\Gamma}^{p  \to n}_{\rm in} 
-&  = & 
+ = 
 \frac{G_F^2 \tilde m_e a}{2 \pi^{3/2} e^{\pi \widetilde{\Delta m} } }
-\nonumber \\
-& \times &
+\times
 G_{1\;3}^{3\;0} 
 \left( \tilde m_e^2 \left|
 \begin{array}{l}
@@ -4441,9 +4423,9 @@ G_{1\;3}^{3\;0}
 \end{array}
 \right.
 \right),
-\nonumber \\
+\\
 \label{RIF}
-\end{eqnarray}
+\end{equation}
 where 
 $G_{p\; q}^{m n}$ is the Meijer function \cite{Gradshteynbook},
 $ \widetilde{\Delta m} \equiv \Delta m /a$ and
@@ -4501,7 +4483,7 @@ where
 $\alpha_i \equiv \gamma^0 \gamma^i$. 
 \begin{figure}
 \begin{center}
-\mbox{\epsfig{file=crispinoetal_fig03.ps,width=0.45 \textwidth,angle=0}}
+\mbox{\epsfig{file=crispinoetal_fig03.ps,width=4in,angle=0}}
 \end{center}
 \caption{ 
 The proton mean proper lifetime is plotted 
@@ -5041,16 +5023,16 @@ Finally the non-physical modes do not satisfy
 the Lorenz condition.
 Accordingly, we choose the polarization vectors 
 $\epsilon_\mu^{(\lambda )}$ as
-\begin{eqnarray}
-& \epsilon^{(0)\mu} & = (-1 , 0, 0, 1)/\sqrt {2},
+\begin{align}
+\epsilon^{(0)\mu} & = (-1 , 0, 0, 1)/\sqrt {2},
 \label{47} \\
-& \epsilon^{(1)\mu} & = (0 , 1 , 0, 0),
+\epsilon^{(1)\mu} & = (0 , 1 , 0, 0),
 \label{48} \\
-& \epsilon^{(2)\mu} & = (0 , 0, 1, 0),
+\epsilon^{(2)\mu} & = (0 , 0, 1, 0),
 \label{49} \\
-& \epsilon^{(3)\mu} & = (1 , 0, 0, 1)/\sqrt{2},
+\epsilon^{(3)\mu} & = (1 , 0, 0, 1)/\sqrt{2},
 \label{50}
-\end{eqnarray}
+\end{align}
 in the Cartesian frame chosen such that
 $k^{\mu}=(\vert {\bf k}\vert, 0,0,\vert {\bf k}\vert )$ (where
 the first component is the time component).
@@ -5095,20 +5077,20 @@ where $d\tilde k_z \equiv
 dk_z / [( 2 \pi )^3 2k_0]$, and the sum runs only over the physical
 polarizations $\lambda = 1, 2$. Using Eq.~(\ref{46}) in 
 Eq.~(\ref{51}), one has
-\begin{eqnarray}
+\begin{multline}
 ^{\rm in}\!R_{k_\bot}^{\rm tot} 
-& = &
+=
 \int_{-\infty}^{\infty}d\tilde{k}_z 
 \int d^{4}x \int d^{4}x'
 e^{i \omega(t-t')-i{\bf k}\cdot({\bf x}-{\bf x'})}
-\nonumber \\
-& & \times 
 j^{\mu}(x)j^{\nu}(x')
+\\
+\times 
 \sum_{\lambda=1}^{2}
 \epsilon_{\mu}^{(\lambda)} ({\bf k})
 \epsilon_{\nu}^{(\lambda)} ({\bf k}).
 \label{51.5}
-\end{eqnarray}
+\end{multline}
 Now, we note the identity
 \begin{equation}
 \sum_{\lambda = 1}^2 \epsilon _\mu^{(\lambda)} \epsilon _\nu^{(\lambda )}
@@ -5122,48 +5104,44 @@ current conservation $\partial_{\mu}j^{\mu} = 0$, and due to
 the fact that $\epsilon_{\mu}^{(3)}$ is proportional to $k_{\mu}$, the
 first two terms in Eq.~(\ref{52}) do not contribute when one substitutes it
 in Eq.~(\ref{51.5}).  Hence, as is well known, 
-\begin{eqnarray}
+\begin{multline}
 ^{\rm in}\!R^{\rm tot}_{k_\bot} 
-& = &
+ = 
 -\frac{1}{T} \int d\tilde k_z \int d^4 x \int d^4 x'
 j^{\mu}(x)j_{\mu}(x')
-\nonumber \\
-& & \times 
+ \\
+\times 
 \exp [i\omega(t-t')-i {\bf k} \cdot ({\bf x} - {\bf x}')] .
 \label{53}
-\end{eqnarray}
+\end{multline}
 Next, by substituting the current~(\ref{44}) in this formula, 
 we obtain  
-\begin{eqnarray}
-^{\rm in}\!R^{\rm tot}_{k_\bot} &  =  & -\frac{q^2}{T} 
+\begin{multline}
+^{\rm in}\!R^{\rm tot}_{k_\bot}  =  -\frac{q^2}{T} 
 \int_{-\infty}^{\infty} \!\! d\tau '  \!\!
 \int_{-\infty}^{\infty} \!\! d\tau '' 
 \cosh a (\tau ' -\tau '' ) \! \!
-\nonumber \\
-& & \times  
+\\
+\times  
 \int_{-\infty}^{\infty} \!\! d\tilde k_z 
 \exp [- (i k_z/a) (\cosh a\tau ' - \cosh a\tau '' )] 
-\nonumber \\
-& & \times  
+\\
+\times  
 \exp [  (i k_0/a) (\sinh a\tau ' - \sinh a\tau '' )],
-\nonumber
-\end{eqnarray}
+\end{multline}
 where we have made the coordinate transformation 
 $t=a^{-1} \sinh a\tau $. Now, it is necessary again
 to factor out the total proper time 
 $T=\int_{-\infty}^{\infty}d\tau$, where $\tau=(\tau'+\tau'')/2$. 
 To this end, we use the momentum transformation~(\ref{k->k'})
 with $m=0$. Then, we find 
-\begin{eqnarray}
+\begin{equation}
 ^{\rm in}\!R_{k_\bot}^{\rm tot} 
-& = & 
-- q^{2}\int_{-\infty}^{\infty}
-d\tilde k'_z \int_{-\infty}^{\infty}d\sigma\cosh a\sigma
-\nonumber \\ 
-& & \times
+= - q^{2}\int_{-\infty}^{\infty}
+d\tilde k'_z \int_{-\infty}^{\infty}d\sigma(\cosh a\sigma)
 \exp\left[\frac{2i k'_{0}}{a}\sinh\frac{a\sigma}{2}\right],
 \label{54.3}
-\end{eqnarray}
+\end{equation}
 where $d\tilde{k}'_z \equiv dk'_z /[(2\pi)^{3}2k'_0]$
 and $\sigma \equiv \tau'-\tau''$.  To evaluate this integral we cut off
 the contribution from large $\vert\sigma\vert$ smoothly by letting
@@ -5291,20 +5269,16 @@ e^{i({\bf k}_\bot\cdot{\bf x}_\bot - \omega \tau )} .
 Then, 
 we expand the electromagnetic quantum field in terms of annihilation
 and creation operators as
-\begin{eqnarray}
+\begin{equation}
 \hat A_\mu (x ) 
-& = & 
-\int d^2{\bf k}_\bot
+= \int d^2{\bf k}_\bot
 \int_{0}^{\infty} d\omega
-\nonumber \\ 
-&& \times 
 \sum_{\lambda = 0}^{3}
 \left\{ \hat{a}_{(\lambda , \omega,{\bf k}_\bot)} 
        A_\mu^{(\lambda, \omega,{\bf k}_\bot)}
        (x) + {\rm H.c.} \right\},
-\nonumber \\
 \label{12}
-\end{eqnarray}
+\end{equation}
 where $A^{(\lambda ,\omega ,{\bf k}_\bot)}_\mu (x)$ are solutions
 of the form given in Eq.~(\ref{10r}). These modes are conveniently
 expressed in terms of the solutions of the scalar field equation
@@ -5643,21 +5617,16 @@ non-vanishing amplitude,
 for the current~(\ref{5})--(\ref{7}) using Eqs.~(\ref{12}) and (\ref{22})
 with Eq.~(\ref{33}).  
 We obtain
-\begin{eqnarray}
+\begin{multline}
  {\cal A}^{\rm em}_{(2,\omega, k_\bot )} 
-&= & 
-i q \left[\frac{\sinh (\pi E/a)}{a}\right]^{1/2} \delta ( E - \omega ) 
-\nonumber \\
-& & \times 
-\left\lbrace K'_{{i E}/{a}}(k_\perp /a)  \right. 
-\nonumber \\
-&  & - 
-\left. 
+= i q \left[\frac{\sinh (\pi E/a)}{a}\right]^{1/2} \delta ( E - \omega ) 
+\left\lbrace K'_{{i E}/{a}}(k_\perp /a)  \right. \\
+- \left. 
 \frac{E^2}{ak_\perp } \int_{{k_\perp}/{a}}^{\infty}
 \frac{dz}{z}
 K_{{i E}/{a}}(z) \right\rbrace , 
 \label{35} 
-\end{eqnarray} 
+\end{multline} 
 where the derivative with respect to the argument is denoted by a prime.
 
 We are interested in the differential 
@@ -5669,18 +5638,14 @@ dW_0^{\rm em} (\omega, k_\bot ) =  \sum_{\lambda = 1}^2
 \end{equation}
 where $T$ is the time interval while the interaction remains turned on.
 We thus obtain
-\begin{eqnarray}
-&& dW^{\rm em}_0 (\omega, k_\bot ) \nonumber \\
-&& = 
-\frac{ q^2 }{4 \pi^3 a} \sinh (\pi E/a) \delta(E-\omega)
-\nonumber \\
-&& \ \ \ \ \times 
+\begin{multline}
+dW^{\rm em}_0 (\omega, k_\bot )
+= \frac{ q^2 }{4 \pi^3 a} \sinh (\pi E/a) \delta(E-\omega) \times \\
 \left| K'_{{i E}/{a}}(k_{\perp }/a) -\frac{E^{2}}{a k_{\perp}}
 \int_{k_{\perp}/a}^{\infty} \!\! \frac{dz}{z}K_{{iE}/{a}}(z)\right|^2
 d\omega, 
-\nonumber\\
 \label{36}
-\end{eqnarray}
+\end{multline}
 where we have used $\delta (0) = T / 2\pi$. 
 
 The total differential rate (per unit area in the transverse-momentum space) 
@@ -6114,7 +6079,7 @@ similarities can be also pointed out \cite{Belletal83}] was discussed
 by \textcite{Unruh98, Unruh99}. 
 \begin{figure}
 \begin{center}
-\mbox{\epsfig{file=crispinoetal_fig10.ps,width=0.45\textwidth,angle=0}}
+\mbox{\epsfig{file=crispinoetal_fig10.ps,width=4in,angle=0}}
 \end{center}
 \caption{The polarizations $P_1$ (solid line) and $P_2$ (dashed line) given 
 in Eqs.~(\ref{polarization2}) and (\ref{derbenevetal}), respectively, are 
