--- a/0710.5373/rmpfinalsub.tex
+++ b/0710.5373/rmpfinalsub.tex
@@ -1625,41 +1625,39 @@ the Unruh effect, it is useful to examine
 the modes natural to the Rindler wedges further for later discussion.
 The purely positive-frequency modes in Minkowski spacetime defined by
 Eqs.~(\ref{sec2:wpositive1}) and (\ref{sec2:wpositive2}) are
-\begin{eqnarray}
-w_{\pm \omega {\bf k}_\perp} & = & 
+\begin{equation}
+w_{\pm \omega {\bf k}_\perp} =
 \int_{-\infty}^{\infty} \frac{dk_z}{\sqrt{8a}\,\pi k_0}
-e^{\pm i\vartheta(k_z)\omega/a}\, e^{-ik_0t+ik_z z}\nonumber \\
-&& \ \ \ \ \ \ \ \ \ \ \times
+e^{\pm i\vartheta(k_z)\omega/a}\, e^{-ik_0t+ik_z z}
 \frac{e^{i{\bf k}_\perp\cdot {\bf x}_\perp}}{2\pi}.
 \label{sec2:wexplicit}
-\end{eqnarray}
+\end{equation}
 The modes $v^R_{\omega{\bf k}_\perp}$ and $v^L_{\omega{\bf k}_\perp}$,
 which vanish in the left and right Rindler wedges,
 respectively, are expressed in terms of these modes as
-\begin{eqnarray}
-v^R_{\omega {\bf k}_\perp} & = & \frac{w_{-\omega {\bf k}_\perp}
+\begin{align}
+v^R_{\omega {\bf k}_\perp} & =  \frac{w_{-\omega {\bf k}_\perp}
 - e^{-\pi\omega/a}w^{*}_{+\omega\,-{\bf k}_\perp}}
 {\sqrt{1-e^{-2\pi\omega/a}}}, \label{sec2:uw}\\
-v^L_{\omega {\bf k}_\perp} & = & \frac{w_{+\omega {\bf k}_\perp}
+v^L_{\omega {\bf k}_\perp} & =  \frac{w_{+\omega {\bf k}_\perp}
 - e^{-\pi\omega/a}w^{*}_{-\omega\,-{\bf k}_\perp}}
 {\sqrt{1-e^{-2\pi\omega/a}}}. \label{sec2:vw}
-\end{eqnarray}
+\end{align}
 These formulas and Eq.~(\ref{sec2:wexplicit}) give the modes
 $v^R_{\omega{\bf k}_\bot}$ and $v^L_{\omega{\bf k}_\bot}$ as
 distributions in the whole of Minkowski spacetime.
 One can verify that the modes $w_{\pm \omega {\bf k}_\perp}$ satisfy 
-\begin{eqnarray}
+\begin{align}
 (w_{\pm \omega{\bf k}_\perp},w_{\pm \omega^\prime{\bf k}_\perp^\prime})_{\rm KG}
-& = & \delta(\omega-\omega^\prime)\delta^2({\bf k}_\perp 
-- {\bf k}_\perp^\prime),\nonumber \\
-\label{sec2:posmodes}\\
+& = \delta(\omega-\omega^\prime)\delta^2({\bf k}_\perp 
+- {\bf k}_\perp^\prime),
+\label{sec2:posmodes}\\[10pt]
 (w_{\pm\omega{\bf k}_\perp}^*,w_{\pm\omega^\prime{\bf k}_\perp^\prime}^*)_{\rm KG}
-& = & 
+& = 
  - \delta(\omega-\omega^\prime)\delta^2({\bf k}_\perp 
 - {\bf k}_\perp^\prime)
-\nonumber \\
 \label{sec2:negmodes}
-\end{eqnarray}
+\end{align}
 with all other Klein-Gordon inner products 
 among $w_{\pm \omega{\bf k}_\perp}$ and their complex conjugates 
 vanishing. Here the Klein-Gordon inner product is defined as an
