--- a/0710.5373/rmpfinalsub.tex
+++ b/0710.5373/rmpfinalsub.tex
@@ -489,7 +489,7 @@ are infinitely many ways of choosing the functions $f_i$'s.
 
 Expanding the quantum field $\hat{\phi}(x)$ as
 \begin{equation}
-\phi(x) = \sum_{i}\left[ \hat{a}_i f_i(x) + 
+\hat{\phi}(x) = \sum_{i}\left[ \hat{a}_i f_i(x) + 
 \hat{a}_i^\dagger f_i^*(x)\right],
 \end{equation}
 one finds
@@ -594,13 +594,13 @@ f_i^{(1)*} & = & \sum_I\left[\alpha_{Ii}f_I^{(2)*} -
 The scalar field $\hat{\phi}(x)$ 
 can be expanded using either of the two sets $\{f_i^{(1)}\}$ and 
 $\{f_I^{(2)}\}$:
-\begin{eqnarray}
-\hat{\phi}(x) & = & 
+\begin{equation}
+\hat{\phi}(x) = 
 \sum_i \left[ \hat{a}_i^{(1)}f_i^{(1)} + \hat{a}_i^{(1)\dagger}
-f_i^{(1)*}\right] \nonumber \\
-& = & \sum_I\left[ \hat{a}_I^{(2)}f_I^{(2)} + \hat{a}_I^{(2)\dagger}
+f_i^{(1)*}\right] 
+ =  \sum_I\left[ \hat{a}_I^{(2)}f_I^{(2)} + \hat{a}_I^{(2)\dagger}
 f_I^{(2)*}\right].
-\end{eqnarray}
+\end{equation}
 Using the expansion given by Eqs.~(\ref{sec2:exp1}) and (\ref{sec2:exp2}),
 and comparing the coefficients of $f_i^{(1)}$ and $f_i^{(1)*}$, we find
 \begin{equation}
